# feel

./: .gitignore  README.md  dataset_training.ipynb  kto_dataset_processor.py  kto_eval.ipynb  kto_pipeline.py  kto_quickstart.ipynb  pyproject.toml  requirements.txt  trl_rlhf_data.py
.github/workflows/: auto-assign.yml
app/: README.md  app.py  feedback.py  languages.json  leadboard_config.py  tempCodeRunnerFile.py
data/: download_data.sh  example_data.json  generate_dpo.py
eval/: bt.py  evaluate.py  evaluate_arguments.py  generate_sanity_check.py  sft_generations.json
eval/test/: gen_examples_idan_mini.json  gens_examples_idan.json
ml/: README.md  adapter_metadata.py  dataset_transformer.py  dpo_pipeline.py  feel.yaml  kto.py  kto_dataset_processor.py  kto_lora.py  train.sh  trainer.py
ml/eval/: .reward_eval.py.swp  alpaca.py  bt.py  evaluate_arguments.py  evaluation_pipeline.py  generate.py  generate_sanity_check.py  kto_generations.json  reward_eval.py  utils.py
