[project]
name = "ohp"
version = "0.1.0"
description = "A human feedback project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.1.0",
    "distilabel>=1.4.1",
    "ipykernel>=6.29.5",
    "torch>=2.5.1",
    "transformers>=4.47.1",
]

[dependency-groups]
ml = [
    "trl>=0.12.2",
]
app = [
    "gradio>=5.23.1",
    "huggingface-hub>=0.26.5",
    "transformers>=4.47.1",
]
